<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/TableRow00"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/LabelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/label_button" />

            <TextView
                android:id="@+id/LabelSelectName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/label_selectname" />

            <TextView
                android:id="@+id/LabelEditName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/label_editname" />

        </TableRow>

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_button1" />

            <Spinner
                android:id="@+id/Spinner01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/nameItems" />

            <EditText
                android:id="@+id/EditText01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:hint="@string/editname_hint" />

        </TableRow>

        <TableRow
            android:id="@+id/TableRow02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_button2" />

            <Spinner
                android:id="@+id/Spinner02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/nameItems" />

            <EditText
                android:id="@+id/EditText02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:hint="@string/editname_hint" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_button3" />

            <Spinner
                android:id="@+id/Spinner03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/nameItems" />

            <EditText
                android:id="@+id/EditText03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:hint="@string/editname_hint" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_button4" />

            <Spinner
                android:id="@+id/Spinner04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/nameItems" />

            <EditText
                android:id="@+id/EditText04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:hint="@string/editname_hint" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_button5" />

            <Spinner
                android:id="@+id/Spinner05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/nameItems" />

            <EditText
                android:id="@+id/EditText05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:hint="@string/editname_hint" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow06"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_button6" />

            <Spinner
                android:id="@+id/Spinner06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/nameItems" />

            <EditText
                android:id="@+id/EditText06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:hint="@string/editname_hint" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow07"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView07"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_button7" />

            <Spinner
                android:id="@+id/Spinner07"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/nameItems" />

            <EditText
                android:id="@+id/EditText07"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:hint="@string/editname_hint" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow08"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView08"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_button8" />

            <Spinner
                android:id="@+id/Spinner08"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/nameItems" />

            <EditText
                android:id="@+id/EditText08"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:hint="@string/editname_hint" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow09"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView09"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_button9" />

            <Spinner
                android:id="@+id/Spinner09"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/nameItems" />

            <EditText
                android:id="@+id/EditText09"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:hint="@string/editname_hint" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_button10" />

            <Spinner
                android:id="@+id/Spinner10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/nameItems" />

            <EditText
                android:id="@+id/EditText10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:hint="@string/editname_hint" >

                <requestFocus />
            </EditText>
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/labelKeycode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_keycode" />

        <TextView
            android:id="@+id/displayKeycode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>